package com.sysc4806.mini_shopify;
import java.util.Optional;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.stereotype.Controller;
import org.springframework.ui.Model;
import org.springframework.web.bind.annotation.*;

@Controller
@RequestMapping("/orders")
public class OrderController {
    @Autowired
    private OrderRepository orderRepository;

    @GetMapping
    @ResponseBody
    public Iterable<Order> getAllOrders() {
        return orderRepository.findAll();
    }

    @PostMapping
    @ResponseBody
    public Order createOrder(@RequestBody Order order) {
        return orderRepository.save(order);
    }

    @GetMapping("/{id}")
    public String showOrderPage(@PathVariable Long id, Model model) {
        model.addAttribute("orderId", id);
        return "orders";
    }

    @GetMapping("/{id}/json")
    @ResponseBody
    public ResponseEntity<Order> getOrderJson(@PathVariable Long id) {
        return orderRepository.findById(id)
                .map(order -> ResponseEntity.ok(order))
                .orElse(ResponseEntity.status(HttpStatus.NOT_FOUND).build());
    }
}