@startuml

skinparam classAttributeIconSize 0
skinparam classFontSize 14
skinparam classFontStyle Bold
skinparam ArrowColor #2E8B57

class Store {
    - Long id
    - String name
    - String owner
    - String description
    - String category
    - List<Product> products
    - List<String> tags
    --
    + getId(): Long
    + getName(): String
    + getOwner(): String
    + getDescription(): String
    + getCategory(): String
    + getProducts(): List<Product>
    + getTags(): List<String>
    + addProduct(Product)
    + addTag(String)
}

class Product {
    - Long id
    - Store store
    - String description
    - String image
    - int inventoryNumber
    --
    + getId(): Long
    + getStore(): Store
    + getDescription(): String
    + getImage(): String
    + getInventoryNumber(): int
    + increaseInventoryNumber()
    + decreaseInventoryNumber()
}

class Customer {
    - Long id
    - String firstName
    - String lastName
    - String email
    - String phoneNumber
    --
    + getId(): Long
    + getFirstName(): String
    + getLastName(): String
    + getEmail(): String
    + getPhoneNumber(): String
}

class Order {
    - Long id
    - String shippingAddress
    - String shippingMethod
    - String billingAddress
    - String paymentMethod
    --
    + getId(): Long
    + getShippingAddress(): String
    + getShippingMethod(): String
    + getBillingAddress(): String
    + getPaymentMethod(): String
}

class Cart {
    - Long id
    - Customer customer
    - List<CartItem> items
    - double totalPrice
    --
    + getId(): Long
    + getCustomer(): Customer
    + getItems(): List<CartItem>
    + getTotalPrice(): double
    + addItem(CartItem)
    + removeItem(CartItem)
    + clearCart()
    + calculateTotal()
}

class CartItem {
    - Long id
    - Cart cart
    - Product product
    - int quantity
    - double price
    --
    + getId(): Long
    + getCart(): Cart
    + getProduct(): Product
    + getQuantity(): int
    + getPrice(): double
    + setQuantity(int)
}

Store "1" --> "many" Product : owns
Product "many" --> "1" Store : belongs to
Customer "1" --> "1" Cart : has
Cart "1" --> "many" CartItem : contains
CartItem "many" --> "1" Product : references

interface StoreRepository
interface productRepository
interface CustomerRepository
interface OrderRepository
interface CartRepository
interface CartItemRepository

StoreRepository --> Store
productRepository --> Product
CustomerRepository --> Customer
OrderRepository --> Order
CartRepository --> Cart
CartItemRepository --> CartItem

class storeController {
    + createStore(Store)
    + getStore(Long)
    + getOwnerDashboard(Long, Model)
    + deleteStore(Long)
}
class homePageController {
    + index()
    + getAllStores(): Iterable<Store>
    + createStore(Store)
    + getStore(Long)
    + updateStore(Long, Store)
}
class ProductController {
    + index(Model)
    + createProduct(Product)
    + findById(Long)
}
class CustomerController {
    + index(Model)
    + createCustomer(Customer)
    + getCustomer(Long)
}
class OrderController {
    + getAllOrders()
    + createOrder(Order)
    + getOrder(Long)
}
class CartController {
    + getCart(Long)
    + addToCart(Long, Long, int)
    + removeFromCart(Long, Long)
    + updateCartItem(Long, Long, int)
    + clearCart(Long)
    + checkout(Long)
}

storeController --> StoreRepository
homePageController --> StoreRepository
ProductController --> productRepository
CustomerController --> CustomerRepository
OrderController --> OrderRepository
CartController --> CartRepository
CartController --> CartItemRepository
CartController --> productRepository

class MiniShopifyApplication {
    + main(String[])
}

MiniShopifyApplication --> storeController
MiniShopifyApplication --> homePageController
MiniShopifyApplication --> ProductController
MiniShopifyApplication --> CustomerController
MiniShopifyApplication --> OrderController
MiniShopifyApplication --> CartController

@enduml